--- a/Index.html
+++ b/Index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1> Hello World Saties</h1>
+    <h2> Welcome to Monday</h2>
+    <h3> Saties Git Learning</h3>
 </body>
 </html>
