The sample first line
leave a blank
abcdefg

--- a/Index.html
+++ b/Index.html
@@ -10,5 +10,6 @@
     <h1> Hello World Saties</h1>
     <h2> Welcome to Monday</h2>
     <h3> Saties Git Learning</h3>
+    <p>sample message</p>
 </body>
 </html>
